--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div id="score">0</div>
             <button id="start-btn">Start</button>
         </div>
+        <p id="instructions">Click the canvas to make the dinosaur jump.</p>
     </div>
     <script src="js/game.js"></script>
 </body>
