--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             <button id="start-btn">Start</button>
         </div>
         <p id="instructions">Click the canvas to make the dinosaur jump.</p>
+        <div id="game-over" class="hidden">
+            <div id="game-over-content">
+                <p>Game Over</p>
+                <button id="restart-btn">Restart</button>
+            </div>
+        </div>
     </div>
     <script src="js/game.js"></script>
 </body>
